GitHub Workflows：修改流程配置
- 修正依赖安装命令

Signed-off-by: Dragon1573 <49941141+Dragon1573@users.noreply.github.com>

--- a/.github/workflows/hexo-deploy.yml
+++ b/.github/workflows/hexo-deploy.yml
@@ -40,7 +40,7 @@ jobs:
           cache-dependency-path: ./package-lock.json
       - name: 安装必要依赖项
         if: steps.node.outputs.cache-hit != 'true'
-        run: npm run install
+        run: npm install
       - name: 执行编译构建
         run: npx hexo generate
       - name: 设置 GitHub Pages
